prloader add in html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 olorum, modi ratione odit? Iure hic officiis quae. Repellendus, blanditiis?
             </p>
         </div>
+        <div id="preloader">
+            <div id="loader"></div>
+          </div>
+          
     </section>
 </body>
 </html>
