--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section>
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Labore quasi, eaque sapiente, magni amet, expedita necessitatibus nobis aut itaque commodi neque doloribus vero voluptatem eos fugit 
-                minus aliquid fuga consequuntur.
-            </p>
-        </div>
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium doloremque, rerum molestiae distinctio ipsum eos aliquid labore animi repellendus corrupti, d
-                olorum, modi ratione odit? Iure hic officiis quae. Repellendus, blanditiis?
-            </p>
-        </div>
-        <div id="preloader">
-            <div id="loader"></div>
-          </div>
-          
-    </section>
-</body>
+<html>
+  <head>
+    <title>My Page</title>
+    <style>
+      /* Preloader styles */
+      #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 9999;
+      }
+
+      #preloader-spinner {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 50px;
+        height: 50px;
+        margin: -25px 0 0 -25px;
+        border: 5px solid #000;
+        border-top-color: #f00;
+        border-radius: 50%;
+        animation: spin 1s ease-in-out infinite;
+      }
+
+      /* Animation styles */
+      @keyframes spin {
+        0% { transform: rotate(0); }
+        100% { transform: rotate(360deg); }
+      }
+
+      /* Hide preloader when finished loading */
+      body.loaded #preloader {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="preloader">
+      <div id="preloader-spinner"></div>
+    </div>
+
+    <!-- Your page content goes here -->
+
+    <script>
+      // Hide preloader when page is loaded
+      window.addEventListener('load', function() {
+        document.querySelector('body').classList.add('loaded');
+      });
+    </script>
+  </body>
 </html>
