--- a/index.html
+++ b/index.html
@@ -1,57 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Page</title>
-    <style>
-      /* Preloader styles */
-      #preloader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #fff;
-        z-index: 9999;
-      }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="script" type="text/jscript" href="js/js.js"/>
+</head>
+<body>
+<input class="test_1" id="text_1" placeholder="test_1">
+<button type="submit" onclick="main();">Confirm</button>
+<input class="test_2" id="text_2" placeholder="test_2">
 
-      #preloader-spinner {
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 50px;
-        height: 50px;
-        margin: -25px 0 0 -25px;
-        border: 5px solid #000;
-        border-top-color: #f00;
-        border-radius: 50%;
-        animation: spin 1s ease-in-out infinite;
-      }
-
-      /* Animation styles */
-      @keyframes spin {
-        0% { transform: rotate(0); }
-        100% { transform: rotate(360deg); }
-      }
-
-      /* Hide preloader when finished loading */
-      body.loaded #preloader {
-        display: none;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="preloader">
-      <div id="preloader-spinner"></div>
-    </div>
-
-    <!-- Your page content goes here -->
-
-    <script>
-      // Hide preloader when page is loaded
-      window.addEventListener('load', function() {
-        document.querySelector('body').classList.add('loaded');
-      });
-    </script>
-  </body>
+</body>
 </html>
