--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  <link rel="script" type="text/jscript" href="js/js.js"/>
 </head>
+  <script src="js/js.js"></script>
 <body>
 <input class="test_1" id="text_1" placeholder="test_1">
-<button type="submit" onclick="main();">Confirm</button>
+<button type="submit" onclick="myFunction()">Confirm</button>
 <input class="test_2" id="text_2" placeholder="test_2">
 
 </body>
